Fix 'undo move' button height
https://trello.com/c/PYyU1n7o

The `fb-govuk-button-inverted` class applies top and bottom padding of 5px, when the `govuk-button` has 8px / 7px top/bottom padding.

Removed the box-shadow on the blue button, as otherwise it will make the bottom border look too thick and will not align with the undo button.

Applied to the undo button the `govuk-button` class so it has all the base styles.

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -161,11 +161,9 @@ a[disabled] {
 
 .fb-govuk-button-inverted {
   @include button_type_link;
-}
-
-.fb-govuk-button-inverted {
-  @include button_type_link;
   box-shadow: none; // 0 1px 0 #002d18;
+  padding: 8px 10px 7px;
+  margin-bottom: 0;
 }
 
 /* Publishing
@@ -450,6 +448,10 @@ h1 span.EditableElement {
       margin-bottom: govuk-spacing(2);
       margin-left: 0;
       margin-right: auto;
+    }
+
+    a.fb-govuk-button {
+      box-shadow: none;
     }
 
     @include govuk-media-query($from: tablet) {
